--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.0",
+    "cookie-parser": "^1.4.6",
     "expres": "^0.0.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
